--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body class="bodyclass">
     <div class="pageclass">
       <header class="headerclass">
-        <h1>David's MGs<img class="photol-right-shadowless" src="images/MG.logo.png"></h1>
+        <h1>David's MGs<img class="photol-right-shadowless" src="images/mg.logo.png"></h1>
       </header>
       <main class="mainclass">
         <section>
