--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
       </header>
       <main class="mainclass">
         <section>
-          <p>I spent an interesting ten and a half years getting to know an MG TC. I enjoyed learning how it worked, doing jobs on it, finding out about its history and, most of all, driving it. The journey that I went on can be viewed by clicking on the TC's photo, probably my favourite one, taken by the son of a neighbour. He was not only interested in cars, but was also an accomplished photographer.</p>
-          <p>Then the time came to pass on the TC to someone who would look after it, improve it and enjoy it. But the space in the garage just had to be filled and thus an MGB arrived. Click on the B's photo to find out how a new journey evolved.</p>
+          <p>I ran an MGF for 12 years, until I retired. It was a pleasure to drive and was the only thing that kept me sane commuting from Steyning to Crawley, particularly with the hood down.</p>
+          <p>Then I spent an interesting ten and a half years getting to know an MG TC. I enjoyed learning how it worked, doing jobs on it, finding out about its history and, most of all, driving it. The journey that I went on can be viewed by clicking on the TC's photo, probably my favourite one, taken by the son of a neighbour. He was not only interested in cars, but was also an accomplished photographer.</p>
+          <p>Then the time came to pass on the TC to someone who would look after it, improve it and enjoy it. But the space in the garage just had to be filled and thus an MGB arrived. Click on the B's photo to find out how a new journey evolved or on the TC to explore that ten and a half years.</p>
+          <img class="photol-left" src="images/mgf.jpg">
           <a href="https://djsmgs.github.io/TC4985/index.html"><img class="photol-left" src="images/TC4985small.jpg"></a>
-          <a href="https://djsmgs.github.io/MGB/index.html"><img class="photol-right" src="images/DKK416KlightBlur.png"></a>
+          <a href="https://djsmgs.github.io/MGB/index.html"><img class="photol-left" src="images/DKK416KlightBlur.png"></a>
           <p class="clear"></p>
         </section>
       </main>
       <footer class="footerclass">
-        <p>&copy; David James 2025   Last updated: 14th November 2025</p>
+        <p>&copy; David James 2025   Last updated: 3rd December 2025</p>
       </footer>
     </div>
   </body>
