--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>MGs</title>
+    <title>template</title>
     <link href="variables.css" rel="stylesheet" type="text/css" />
     <link href="classes.css" rel="stylesheet" type="text/css" />
+    <link href="MGBclasses.css" rel="stylesheet" type="text/css" />
     <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
     <link rel="shortcut icon" href="favicon/favicon.ico" />
@@ -17,6 +18,7 @@
   <body class="bodyclass">
     <div class="pageclass">
       <header class="headerclass">
+        <p class="text-right"><a href="../home.html">Back</a></p>
         <h1>David's MGs<img class="photol-right-shadowless" src="images/mg.logo.png"></h1>
       </header>
       <main class="mainclass">
@@ -26,7 +28,7 @@
           <p>Then the time came to pass on the TC to someone who would look after it, improve it and enjoy it. But the space in the garage just had to be filled and thus an MGB arrived. Click on the B's photo to find out how a new journey evolved or on the TC to explore that ten and a half years.</p>
           <img class="photol-left" src="images/mgf.jpg">
           <a href="https://djsmgs.github.io/TC4985/index.html"><img class="photol-left" src="images/TC4985small.jpg"></a>
-          <a href="https://djsmgs.github.io/MGB/index.html"><img class="photol-left" src="images/DKK416KlightBlur.png"></a>
+          <a href="https://djsmgs.github.io/MGB/index.html"><img class="photol-left" src="images/DKK416KlightBlurCropped.png"></a>
           <p class="clear"></p>
         </section>
       </main>
