--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>MGs</title>
     <link href="variables.css" rel="stylesheet" type="text/css" />
     <link href="classes.css" rel="stylesheet" type="text/css" />
-    <link href="MGBclasses.css" rel="stylesheet" type="text/css" />
+    <link href="MGclasses.css" rel="stylesheet" type="text/css" />
     <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
     <link rel="shortcut icon" href="favicon/favicon.ico" />
